--- a/style.css
+++ b/style.css
@@ -127,16 +127,21 @@ html {
   font-size: 16px;
   scroll-behavior: smooth;
 }
+body {
+  margin: 0;
+  overflow-x: hidden;
+  color: var(--clr-black);
+}
 *,
 *::after,
 *::before {
   box-sizing: border-box;
 }
-
-img {
-  width: 100%;
-  height: auto;
+a {
+  color: var(--clr-yellow-light);
+  transition: all 0.5s ease-out;
 }
+
 h1 {
   margin: 0;
   font-size: var(--step-5);
@@ -161,6 +166,19 @@ h6 {
   margin: 0;
   font-size: var(--step--1);
 }
+
+a:hover {
+  opacity: 0.75;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+p {
+  line-height: 1.6;
+}
 /* 
 ==========================================================================
                         G R I D     C L A S S 
@@ -171,6 +189,7 @@ h6 {
   max-width: var(--grid-max-width);
   padding-inline: var(--grid-gutter);
   margin-inline: auto;
+  grid-template-columns: var(--grid-columns);
 }
 
 .u-grid {
@@ -182,7 +201,10 @@ h6 {
                         G L O B A L      C L A S S
 ==========================================================================
 */
-
+/*box shadow*/
+.box-shadow {
+  box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
+}
 /*font size*/
 .step--2 {
   font-size: var(--step--2);
@@ -321,3 +343,40 @@ h6 {
 /* a.shake:nth-of-type(1):hover {
   color: #4078c0;
 } */
+.container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.none {
+  display: none;
+}
+
+/* 
+==========================================================================
+                        S I T E   S T Y L E S
+==========================================================================
+*/
+
+.header {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 999;
+  width: 100%;
+  height: var(--step-5);
+  background-color: var(--clr-primary-2);
+}
+
+.header > .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo a{
+  color:var(--clr-primary-1);
+  font-weight: bold;
+  font-size: var(--step-3);
+  text-decoration: none;
+}
