--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
   --font: "Raleway", sans-serif;
   --max-width: 1200px;
   --header-height: 4rem;
+  --border-radius:.5rem;
   /* font size*/
   --step--2: clamp(0.78rem, calc(0.77rem + 0.03vw), 0.8rem);
   --step--1: clamp(0.94rem, calc(0.92rem + 0.11vw), 1rem);
@@ -377,10 +378,12 @@ p {
     flex-direction: row;
     opacity: 1;
     pointer-events: auto;
+    
   }
 
   .menu a {
     padding: 0 1rem;
+    
   }
 
   .menu a:last-child {
@@ -431,35 +434,83 @@ p {
 }
 
 /* ********** ProgressBar ********** */
-
-progress {
-  width: 100%;
-  height: 1rem;
-  background-color: var(--gray-color);
+.skills {
+  padding: var(--space-xs);
 }
 
-progress::-webkit-progress-bar {
-  background-color: var(--gray-color);
-}
-
-progress::-webkit-progress-value {
-  background-color: var(--gray-dark-color);
-}
-
-progress::-moz-progress-bar {
-  background-color: var(--gray-dark-color);
-}
-
-.progress {
-  margin: 1rem auto;
-}
-
-.progress > p {
-  margin: 0;
+.skill-items {
   display: flex;
-  justify-content: space-between;
-  font-size: 0.85rem;
+  align-items: center;
+  justify-content:space-around;
 }
+
+.skill-bar,
+.skill-bar::after {
+  position: relative;
+  width: 175px;
+  height: 8px;
+  background-color: var(--gray-dark-color);
+  overflow: hidden;
+}
+
+.skill-bar::after {
+  content: "";
+  position: absolute;
+  left: -175px;
+  background-color: var(--first-color);
+  transition: color 0.1s, background-color 0.2s ease-in-out;
+  animation: skills-bar-fill 12s ease-in-out forwards;
+}
+
+.skill-bar--90::after {
+  --skill-bar-len: 90%;
+  background-color: orangered;
+}
+.skill-bar--80::after {
+  --skill-bar-len: 80%;
+  background-color: orangered;
+}
+.skill-bar--70::after {
+  --skill-bar-len: 70%;
+  background-color: orange;
+}
+.skill-bar--60::after {
+  --skill-bar-len: 60%;
+  background-color: orange;
+}
+.skill-bar--50::after {
+  --skill-bar-len: 50%;
+  background-color: orange;
+
+}
+.skill-bar--40::after {
+  --skill-bar-len: 40%;
+  background-color: gold;
+}
+.skill-bar--30::after {
+  --skill-bar-len: 30%;
+  background-color: goldenrod;
+  
+
+}
+.skill-bar--20::after {
+  --skill-bar-len: 20%;
+  background-color: goldenrod;
+  
+
+}
+.skill-bar--10::after {
+  --skill-bar-len: 10%;
+  background-color: goldenrod;
+}
+
+@keyframes skills-bar-fill {
+  to {
+    transform: translateX(var(--skill-bar-len));
+  }
+}
+
+
 
 /* ********** Utilities ********** */
 .shake {
@@ -509,7 +560,7 @@ progress::-moz-progress-bar {
 }
 
 .btn {
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   padding: 1rem;
   display: inline-block;
   width: 200px;
@@ -526,7 +577,8 @@ progress::-moz-progress-bar {
   /* max-width: var(--max-width); */
 }
 .gray-scale {
-  filter: grayscale(1);
+  filter: grayscale(.4);
+  border-radius: .5rem;
 }
 
 .none {
@@ -815,6 +867,8 @@ progress::-moz-progress-bar {
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
+  border:1rem;
+  
 }
 
 .btn {
@@ -822,9 +876,9 @@ progress::-moz-progress-bar {
   position: relative;
   width: 250px;
   height: 80px;
-  border-radius: 10px;
+  border-radius: 30px;
   background: none;
-  border: none;
+  /* border:0; */
   font-size: 40px;
   color: white;
   text-decoration: none;
@@ -868,79 +922,3 @@ progress::-moz-progress-bar {
   }
 }
 
-/* *** barra progreso *** */
-.skills {
-  padding: var(--space-xs);
-}
-
-.skill-items {
-  display: flex;
-  align-items: center;
-  justify-content:space-around;
-}
-
-.skill-bar,
-.skill-bar::after {
-  position: relative;
-  width: 175px;
-  height: 8px;
-  background-color: var(--gray-dark-color);
-  overflow: hidden;
-}
-
-.skill-bar::after {
-  content: "";
-  position: absolute;
-  left: -175px;
-  background-color: var(--first-color);
-  transition: color 0.1s, background-color 0.2s ease-in-out;
-  animation: skills-bar-fill 12s ease-in-out forwards;
-}
-
-.skill-bar--90::after {
-  --skill-bar-len: 90%;
-  background-color: orangered;
-}
-.skill-bar--80::after {
-  --skill-bar-len: 80%;
-  background-color: orangered;
-}
-.skill-bar--70::after {
-  --skill-bar-len: 70%;
-  background-color: orange;
-}
-.skill-bar--60::after {
-  --skill-bar-len: 60%;
-  background-color: orange;
-}
-.skill-bar--50::after {
-  --skill-bar-len: 50%;
-  background-color: orange;
-
-}
-.skill-bar--40::after {
-  --skill-bar-len: 40%;
-  background-color: gold;
-}
-.skill-bar--30::after {
-  --skill-bar-len: 30%;
-  background-color: goldenrod;
-  
-
-}
-.skill-bar--20::after {
-  --skill-bar-len: 20%;
-  background-color: goldenrod;
-  
-
-}
-.skill-bar--10::after {
-  --skill-bar-len: 10%;
-  background-color: goldenrod;
-}
-
-@keyframes skills-bar-fill {
-  to {
-    transform: translateX(var(--skill-bar-len));
-  }
-}
