--- a/style.css
+++ b/style.css
@@ -559,7 +559,8 @@ p {
   box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
 }
 
-.btn {
+.btn,
+.btn2 {
   border-radius: 1rem;
   padding: 1rem;
   display: inline-block;
@@ -878,7 +879,7 @@ p {
   height: 80px;
   border-radius: 30px;
   background: none;
-  /* border:0; */
+  border:0; 
   font-size: 40px;
   color: white;
   text-decoration: none;
